<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactionManagementModule.presentation.transactionManagement.transaction.TransactionFragment">

    <TextView
        android:id="@+id/transaction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_transaction"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/transaction_tab_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_text">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/transaction_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabIndicatorFullWidth="true"
            android:background="@color/surface"
            app:tabSelectedTextColor="@color/blue_500"
            app:tabTextColor="@color/white"
            tools:layout_editor_absoluteY="64dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_income" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_expense" />

        </com.google.android.material.tabs.TabLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_title_parent"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_tab_card">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_description_parent"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_title_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_amount_parent"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_description_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_date_parent"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_amount_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/text_date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_category_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:theme="@style/TextInputLayoutAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_date_parent">

        <AutoCompleteTextView
            android:id="@+id/transaction_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="@string/text_category"
            android:backgroundTint="@color/white"
            android:inputType="none"
            android:textColorHint="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transaction_update_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/text_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_category_parent"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="570dp" />

</androidx.constraintlayout.widget.ConstraintLayout>