<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transactionManagementModule.presentation.transactionsDashboard.TransactionsDashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/transactions_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_transactions"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/transaction_filter_tab_parent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintTop_toBottomOf="@id/transactions_title_text">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/transaction_filter_tab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:tabIndicatorFullWidth="true">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_overall" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_income" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_expense" />

                </com.google.android.material.tabs.TabLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/transactions_total_balance_card"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/surface"
                app:cardCornerRadius="25dp"
                app:layout_constraintTop_toBottomOf="@id/transaction_filter_tab_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/transactions_total_balance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:gravity="center"
                        android:text="@string/text_total_balance"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/transactions_total_balance_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/text_placeholder"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@id/transactions_total_balance_text"
                        app:layout_constraintStart_toStartOf="@id/transactions_total_balance_text"
                        app:layout_constraintTop_toBottomOf="@id/transactions_total_balance_text"
                        tools:layout_editor_absoluteX="153dp"
                        tools:layout_editor_absoluteY="57dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/click_to_see_all_transactions"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:id="@+id/transactions_total_income_expense_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transactions_total_balance_card">

                <androidx.cardview.widget.CardView
                    android:id="@+id/total_expense_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/surface"
                    app:cardCornerRadius="25dp"
                    tools:showIn="@layout/fragment_friends_dashboard">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/transactions_total_expense_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/transactions_total_expense_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="58dp"
                            android:text="@string/text_total_expense"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/text_expense_logo"
                            android:src="@drawable/ic_expense"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/transactions_total_expense_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/text_placeholder"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/transactions_total_expense_text"
                            app:layout_constraintTop_toBottomOf="@+id/transactions_total_expense_text" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <Space
                    android:id="@+id/transactions_layout_spacer"
                    android:layout_width="8dp"
                    android:layout_height="match_parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/total_income_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/surface"
                    app:cardCornerRadius="25dp"
                    tools:showIn="@layout/fragment_friends_dashboard">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/transactions_total_income_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/transactions_total_income_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="58dp"
                            android:text="@string/text_total_income"
                            android:textAllCaps="false"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:contentDescription="@string/text_income_logo"
                            android:src="@drawable/ic_income"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/transactions_total_income_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/text_placeholder"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/transactions_total_income_text"
                            app:layout_constraintTop_toBottomOf="@+id/transactions_total_income_text" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/transactions_pie_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="300dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transactions_total_income_expense_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/transactions_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue_500"
        android:contentDescription="@string/text_add_transaction"
        android:scaleType="center"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:src="@drawable/ic_plus"
        android:tintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>