<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:backgroundTint="@color/surface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/rv_transaction_border_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/toolbar_background"
            android:contentDescription="@string/text_border_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/background"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/rv_transaction_logo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/text_rv_transaction_logo"
                app:tint="@color/white"
                android:elevation="10dp"
                android:src="@drawable/ic_back" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/rv_transaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/text_placeholder"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/rv_transaction_description"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:layout_marginBottom="6dp"
            android:text="@string/text_placeholder"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/rv_transaction_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/rv_transaction_name" />

        <TextView
            android:id="@+id/rv_transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_placeholder"
            android:textColor="@color/income"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>